fixes video alignment

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,3 +32,20 @@ h5 {
 .background-box {
   @apply bg-transparent;
 }
+
+.youtube-video {
+  position: relative;
+  padding-bottom: 56.25%;
+  margin: 0 -1rem;
+  height: 0;
+  overflow: hidden;
+  max-width: 100vw;
+}
+
+.youtube-video iframe, object, embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100%;
+}
